# openfoamparser_rust

./: Cargo.toml  README.md
resources/test/cavity/: .gitignore  single_particle_animation.pvsm
resources/test/cavity/0.5/: C  Cx  Cy  Cz  U  p  phi
resources/test/cavity/0.5/uniform/: time
resources/test/cavity/constant/polyMesh/: boundary  faces  neighbour  owner  points
resources/test/cavity/system/: blockMeshDict  controlDict
src/: lib.rs
