[package]
name = "openfoamparser_rust"
version = "0.1.0"
authors = ["Lukas Stratmann <stratmann@ccs-labs.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.24.0"
approx = "0.4.0"
regex = "1.4.2"
lazy_static = "1.4.0"

[dev-dependencies]
